--- a/iDaBere/app/src/main/res/layout/activity_welcome.xml
+++ b/iDaBere/app/src/main/res/layout/activity_welcome.xml
@@ -16,7 +16,7 @@
         android:textAlignment="center"
         android:id="@+id/textView2"
         android:paddingBottom="@dimen/activity_horizontal_margin"
-        android:textColor="@color/white"
+        android:textColor="@android:color/white"
         android:layout_above="@+id/welcome_login_button"
         android:layout_centerHorizontal="true" />
 
