--- a/iDaBere/app/src/main/res/layout/bar_list_item.xml
+++ b/iDaBere/app/src/main/res/layout/bar_list_item.xml
@@ -40,7 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:background="@color/transparent"
+                android:background="@android:color/transparent"
                 card_view:srcCompat="@drawable/ic_location_on_black_24dp"
                 android:visibility="visible"/>
 
