--- a/iDaBere/app/src/main/res/layout/menu_list_item.xml
+++ b/iDaBere/app/src/main/res/layout/menu_list_item.xml
@@ -123,8 +123,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:background="@color/transparent"
-                        card_view:srcCompat="@drawable/ic_info_black_24dp" />
+                        android:background="@android:color/transparent"
+                        card_view:srcCompat="@drawable/ic_info_colored_24dp" />
 
 
                 </LinearLayout>
