--- a/iDaBere/app/src/main/res/layout/menu_list_item.xml
+++ b/iDaBere/app/src/main/res/layout/menu_list_item.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-
+    android:background="@drawable/row_highlighter"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -44,11 +44,9 @@
                     android:textSize="@dimen/paragraph_text_size"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="38dp"
-                    android:layout_marginEnd="38dp"
                     android:layout_centerVertical="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true" />
+                    android:layout_toLeftOf="@+id/item_price_currency"
+                    android:layout_toStartOf="@+id/item_price_currency" />
 
                 <TextView
                     android:id="@+id/item_price_currency"
