--- a/iDaBere/app/src/main/res/menu/item_list_menu.xml
+++ b/iDaBere/app/src/main/res/menu/item_list_menu.xml
@@ -14,6 +14,7 @@
 
 
     <item
+        android:id="@+id/random_drink_menu_button"
         android:icon="@drawable/ic_whatshot_white_24dp"
         android:orderInCategory="2"
         android:title="@string/random_list_item_icon_label"
