--- a/iDaBere/app/src/main/res/layout/activity_rate_order.xml
+++ b/iDaBere/app/src/main/res/layout/activity_rate_order.xml
@@ -10,27 +10,29 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/colorPrimary"
     tools:context="it.unitn.disi.lpsmt.idabere.activities.LoginActivity"
     android:weightSum="1">
 
 
     <ImageView
+        android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_lemonade"
-        />
+        app:srcCompat="@drawable/ic_lemonade_white" />
 
 
+    <ListView
+        android:id="@+id/items_list_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_weight="1">
 
-    <!--<ListView-->
-        <!--android:id="@+id/items_list_view"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_weight="1">-->
-
-    <!--</ListView>-->
+    </ListView>
 
     <TextView
+        style="@style/checkout_bottom_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/activity_vertical_margin"
@@ -40,40 +42,42 @@
         android:text="@string/greetings_message"/>
 
     <Button
+        android:id="@+id/finish_button"
         android:layout_marginTop="@dimen/activity_vertical_margin"
-        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/finish_button"/>
 
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:textAlignment="center"
-        android:textSize="@dimen/title_text_size"
-        android:textStyle="bold"
-        android:text="@string/credits_title"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.45">
+        android:layout_marginTop="@dimen/activity_vertical_margin">
 
         <TextView
+            style="@style/checkout_bottom_bar"
+
+            android:id="@+id/textView8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/credits_title"
+            android:textSize="@dimen/title_text_size"
+            android:textStyle="bold"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
+
+        <TextView
+            style="@style/checkout_bottom_bar"
+
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
             android:text="Giovanni M Riva"
             android:textAlignment="center"
+            android:layout_below="@id/textView8"
             android:textStyle="bold" />
 
         <TextView
+            style="@style/checkout_bottom_bar"
+
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -85,20 +89,23 @@
 
 
         <TextView
+            style="@style/checkout_bottom_bar"
+
             android:id="@+id/textView6"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@id/textView4"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:text="Alessandro Amici"
             android:textAlignment="center"
-            android:textStyle="bold"
-            android:layout_centerVertical="true"
-            android:layout_below="@id/textView4"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-
+            android:textStyle="bold" />
 
         <TextView
+            style="@style/checkout_bottom_bar"
+
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -107,6 +114,8 @@
             android:layout_below="@+id/textView6"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
+
+
     </RelativeLayout>
 
 
