--- a/iDaBere/app/src/main/res/layout/menu_list_item.xml
+++ b/iDaBere/app/src/main/res/layout/menu_list_item.xml
@@ -23,51 +23,51 @@
             <RelativeLayout
                 android:id="@+id/item_infos_layout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingBottom="@dimen/menu_item_vertical_padding">
+                android:layout_height="wrap_content">
 
 
                 <TextView
                     android:id="@+id/info_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
                     android:text="@string/menu_list_item_name"
                     android:textSize="@dimen/title_text_size"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true" />
 
                 <TextView
                     android:id="@+id/da_label"
-                    android:paddingRight="@dimen/currency_right_margin"
-                    android:text="da"
-                    android:textSize="@dimen/paragraph_text_size"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_toLeftOf="@+id/item_price_currency"
-                    android:layout_toStartOf="@+id/item_price_currency" />
+                    android:layout_toStartOf="@+id/item_price_currency"
+                    android:paddingRight="@dimen/currency_right_margin"
+                    android:text="da"
+                    android:textSize="@dimen/paragraph_text_size" />
 
                 <TextView
                     android:id="@+id/item_price_currency"
-                    android:paddingRight="@dimen/currency_right_margin"
-                    android:text="@string/menu_list_item_currency"
-                    android:textSize="@dimen/paragraph_text_size"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_toLeftOf="@+id/item_price"/>
+                    android:layout_toLeftOf="@+id/item_price"
+                    android:paddingRight="@dimen/currency_right_margin"
+                    android:text="@string/menu_list_item_currency"
+                    android:textSize="@dimen/paragraph_text_size" />
 
                 <TextView
                     android:id="@+id/item_price"
-                    android:text="@string/menu_list_item_price"
-                    android:textSize="@dimen/paragraph_text_size"
-                    android:textStyle="bold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
+                    android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true" />
+                    android:layout_centerVertical="true"
+                    android:text="@string/menu_list_item_price"
+                    android:textSize="@dimen/paragraph_text_size"
+                    android:textStyle="bold" />
 
 
             </RelativeLayout>
