--- a/iDaBere/app/src/main/res/layout/checkout_list_item_title.xml
+++ b/iDaBere/app/src/main/res/layout/checkout_list_item_title.xml
@@ -37,6 +37,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:visibility="gone"
             android:gravity="center_vertical">
 
 
@@ -47,7 +48,7 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:visibility="invisible"
+            android:visibility="gone"
             android:layout_weight="1">
 
             <TextView
@@ -66,7 +67,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:visibility="invisible"
+            android:visibility="gone"
             android:gravity="center_vertical|right">
 
             <TextView
