--- a/iDaBere/app/src/main/res/values/dimens.xml
+++ b/iDaBere/app/src/main/res/values/dimens.xml
@@ -1,5 +1,4 @@
-<resources
-    xmlns:tools="http://schemas.android.com/tools">
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
@@ -20,9 +19,14 @@
     <dimen name="quantity_number_horizontal_padding">8dp</dimen>
 
     <!-- Bottom navigation bar text size -->
-    <dimen name="design_bottom_navigation_text_size" tools:override="true">@dimen/paragraph_text_size</dimen>
-    <dimen name="design_bottom_navigation_active_text_size" tools:override="true">@dimen/paragraph_text_size</dimen>
+    <dimen name="design_bottom_navigation_text_size" tools:override="true">
+        @dimen/paragraph_text_size
+    </dimen>
+    <dimen name="design_bottom_navigation_active_text_size" tools:override="true">
+        @dimen/paragraph_text_size
+    </dimen>
 
     <dimen name="currency_right_margin">5dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 
 </resources>
