--- a/iDaBere/app/src/main/res/layout/activity_item_info.xml
+++ b/iDaBere/app/src/main/res/layout/activity_item_info.xml
@@ -83,9 +83,9 @@
         android:layout_alignRight="@+id/linearLayout"
         android:layout_gravity="bottom|end"
         android:layout_marginBottom="18dp"
-        app:backgroundTint="@color/infoButtonColor"
+        app:backgroundTint="@color/addPreferredButtonColor"
         app:fabSize="normal"
-        app:srcCompat="@drawable/ic_bookmark_border_white_24dp" />
+        app:srcCompat="@drawable/ic_star_colored_24dp" />
 
 
 
