--- a/iDaBere/app/src/main/res/layout/menu_list_category.xml
+++ b/iDaBere/app/src/main/res/layout/menu_list_category.xml
@@ -1,18 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorPrimaryLight">
+    android:background="@color/colorSecondaryLight">
 
     <TextView
         android:id="@+id/category_text_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:text="@string/category_name"
+        android:text="Preferiti"
         android:padding="@dimen/activity_horizontal_margin"
         android:textSize="@dimen/title_text_size"
         android:textStyle="bold" />
-</LinearLayout>
+
+    <ImageView
+        android:id="@+id/bookmark_preferreds_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_star_colored_24dp"
+        android:layout_marginRight="17dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="17dp"
+        android:visibility="gone"/>
+
+</RelativeLayout>
