--- a/iDaBere/app/src/main/res/values/dimens.xml
+++ b/iDaBere/app/src/main/res/values/dimens.xml
@@ -29,5 +29,6 @@
 
     <dimen name="currency_right_margin">5dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="elevation">20dp</dimen>
 
 </resources>
