--- a/iDaBere/app/src/main/res/layout/activity_delivery_place.xml
+++ b/iDaBere/app/src/main/res/layout/activity_delivery_place.xml
@@ -138,7 +138,8 @@
         </LinearLayout>
     </ScrollView>
 
-    <android.support.v7.widget.Toolbar
+    <android.support.design.widget.AppBarLayout
+        android:elevation="@dimen/elevation"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -200,6 +201,6 @@
 
 
 
-    </android.support.v7.widget.Toolbar>
+    </android.support.design.widget.AppBarLayout>
 
 </RelativeLayout>
