--- a/iDaBere/app/src/main/res/layout/activity_payment_type.xml
+++ b/iDaBere/app/src/main/res/layout/activity_payment_type.xml
@@ -110,7 +110,8 @@
 
 
 
-    <android.support.v7.widget.Toolbar
+    <android.support.design.widget.AppBarLayout
+        android:elevation="@dimen/elevation"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -166,7 +167,7 @@
 
 
 
-    </android.support.v7.widget.Toolbar>
+    </android.support.design.widget.AppBarLayout>
 
 
 
