--- a/iDaBere/app/src/main/res/layout/menu_list_category.xml
+++ b/iDaBere/app/src/main/res/layout/menu_list_category.xml
@@ -21,7 +21,19 @@
         android:id="@+id/bookmark_preferreds_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_star_colored_24dp"
+        app:srcCompat="@drawable/ic_favorite_colored_24dp"
+        android:layout_marginRight="17dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="17dp"
+        android:visibility="gone"/>
+
+    <ImageView
+        android:id="@+id/deals_preferreds_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_euro_symbol_badge"
         android:layout_marginRight="17dp"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
