--- a/iDaBere/app/src/main/res/values/colors.xml
+++ b/iDaBere/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="colorSecondaryLight">#dedfe0</color>
 
     <color name="preferred_category_color">@color/infoColor</color>
+    <color name="deals_category_color">#f39c12</color>
     <color name="infoButtonColor">@color/infoColor</color>
     <color name="addPreferredButtonColor">@color/infoColor</color>
 
