implement calculate total items login in adapter and menu activity

--- a/iDaBere/app/src/main/res/layout/activity_delivery_place.xml
+++ b/iDaBere/app/src/main/res/layout/activity_delivery_place.xml
@@ -13,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:layout_below="@+id/toolbar">
+        android:layout_below="@+id/delivery_bottom_navigation"
+        android:layout_above="@+id/totals_info_bottom_toolbar">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -138,22 +139,30 @@
         </LinearLayout>
     </ScrollView>
 
+    <include
+        layout="@layout/total_infos_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/totals_info_bottom_toolbar">
+
+    </include>
+
     <android.support.design.widget.AppBarLayout
         android:elevation="@dimen/elevation"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
         app:layout_scrollFlags="scroll|enterAlways"
         app:contentInsetLeft="0dp"
         app:contentInsetStart="0dp">
 
 
-
-
             <android.support.design.widget.BottomNavigationView
                 android:id="@+id/delivery_bottom_navigation"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:layout_weight="1"
                 android:background="@color/colorPrimary"
@@ -164,7 +173,9 @@
 
 
 
-
     </android.support.design.widget.AppBarLayout>
+
+
+
 
 </RelativeLayout>
