--- a/iDaBere/app/src/main/res/layout/activity_review_order.xml
+++ b/iDaBere/app/src/main/res/layout/activity_review_order.xml
@@ -14,7 +14,9 @@
         android:id="@+id/expandable_review_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/toolbar">
+        android:layout_below="@+id/toolbar"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
 
     </ExpandableListView>
@@ -47,7 +49,14 @@
 
 
     </android.support.design.widget.AppBarLayout>
+    <include
+        layout="@layout/total_infos_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/totals_info_bottom_toolbar">
 
+    </include>
 
 </RelativeLayout>
 
