--- a/iDaBere/app/src/main/res/layout/activity_payment_type.xml
+++ b/iDaBere/app/src/main/res/layout/activity_payment_type.xml
@@ -19,7 +19,10 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        android:layout_below="@+id/toolbar">
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/toolbar"
+        android:layout_above="@+id/totals_info_bottom_toolbar">
 
         <TextView
             android:layout_width="wrap_content"
@@ -140,6 +143,13 @@
     </android.support.design.widget.AppBarLayout>
 
 
+    <include
+        layout="@layout/total_infos_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/totals_info_bottom_toolbar">
 
+    </include>
 
 </RelativeLayout>
