--- a/iDaBere/app/src/main/res/layout/total_infos_toolbar.xml
+++ b/iDaBere/app/src/main/res/layout/total_infos_toolbar.xml
@@ -6,7 +6,8 @@
     android:layout_height="wrap_content"
     android:background="@color/colorPrimary"
     app:contentInsetLeft="0dp"
-    app:contentInsetStart="0dp">
+    app:contentInsetStart="0dp"
+    android:layout_gravity="bottom">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -29,29 +30,13 @@
             app:srcCompat="@drawable/ic_shopping_cart_black_24dp" />
 
         <TextView
-            android:id="@+id/total_order_items_label"
-            style="@style/total_price_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="15dp"
-            android:layout_marginStart="15dp"
-            android:text="Carrello"
-            android:textSize="@dimen/title_text_size"
-            android:textStyle=""
-            android:visibility="gone" />
-
-        <TextView
             android:id="@+id/total_order_items"
             style="@style/total_price_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/total_order_items_label"
             android:layout_toEndOf="@+id/order_items_label"
             android:layout_toRightOf="@+id/order_items_label"
-            android:text="100"
+            android:text="0"
             android:textSize="@dimen/title_text_size"
             android:textStyle="bold" />
 
@@ -62,7 +47,6 @@
             android:layout_height="wrap_content"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:text="TOTALE"
-            android:textSize=""
             android:textStyle="bold"
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@+id/total_order_price_currency"
