--- a/iDaBere/app/src/main/res/layout/bar_list_item.xml
+++ b/iDaBere/app/src/main/res/layout/bar_list_item.xml
@@ -9,7 +9,7 @@
             <!-- Bar basic infos -->
 
     <LinearLayout
-        android:id="@+id/item_infos_layout"
+        android:id="@+id/total_price_items_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
