--- a/iDaBere/app/src/main/res/layout/menu_list_item.xml
+++ b/iDaBere/app/src/main/res/layout/menu_list_item.xml
@@ -21,7 +21,7 @@
             <!-- Item basic infos -->
 
             <RelativeLayout
-                android:id="@+id/item_infos_layout"
+                android:id="@+id/total_price_items_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
