--- a/iDaBere/app/src/main/res/layout/rate_order_list_item.xml
+++ b/iDaBere/app/src/main/res/layout/rate_order_list_item.xml
@@ -13,7 +13,7 @@
         <!-- Item basic infos -->
 
         <LinearLayout
-            android:id="@+id/item_infos_layout"
+            android:id="@+id/total_price_items_layout"
             android:layout_width="match_parent"
             android:layout_height="@dimen/card_height_closed"
             android:orientation="horizontal">
