--- a/iDaBere/app/src/main/res/layout/checkout_list_item_title.xml
+++ b/iDaBere/app/src/main/res/layout/checkout_list_item_title.xml
@@ -8,7 +8,7 @@
     <!-- Item basic infos -->
 
     <LinearLayout
-        android:id="@+id/item_infos_layout"
+        android:id="@+id/total_price_items_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
