--- a/iDaBere/app/src/main/res/layout/activity_order_status.xml
+++ b/iDaBere/app/src/main/res/layout/activity_order_status.xml
@@ -13,7 +13,6 @@
 
 
 
-
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
@@ -43,8 +42,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:background="@color/colorPrimary"
-        android:minHeight="500px"
-        android:minWidth="500px"
+        android:minHeight="200dp"
+        android:minWidth="200dp"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:layout_below="@+id/oder_status_id"
         android:layout_centerHorizontal="true" />
